// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary 1`] = `
<div>
  <p>
    Viewing 
    3
     expense(s) totaling  
    $1,141.95
  </p>
</div>
`;

exports[`should render expense summary with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     expense(s) totaling  
    $1,095.00
  </p>
</div>
`;

exports[`should render expense summary with no expenses 1`] = `
<div>
  No Expenses Found
</div>
`;
